2005-11-03  Alexander Larsson  <alexl@redhat.com>

	* lib/sources/mozillasource.py:
	Don't strip comments from inside strings
	
	* lib/unittests.py:
	Add mozillasource tests

2005-11-03  Alexander Larsson  <alexl@redhat.com>

	* lib/cache.py:
	Use ~/.sabayon/profile_cache, not ~/.profile_cache

2005-11-02  Alexander Larsson  <alexl@redhat.com>

	* lib/storage.py:
	* lib/unittests.py:
	Remove the revisioning stuff from the storage. The UI was way to
	complicated. This is easier done on a profile zipfile level.

	* admin-tool/editorwindow.py:
	Remove revisions from UI.
	Display panel launcher files.

2005-11-02  Alexander Larsson  <alexl@redhat.com>
	
	* lib/userprofile.py:
	Add get_path_description to delegates
	
	* lib/sources/paneldelegate.py:
	Implement get_path_description for panel delegate.
	Remove launchers from storage on removal.

2005-11-02  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	* admin-tool/Makefile.am:
	* admin-tool/lockdown/.cvsignore:
	* admin-tool/lockdown/DONT_EDIT_FILES_HERE:
	* admin-tool/lockdown/Makefile.am:
	* admin-tool/lockdown/__init__.py:
	* admin-tool/lockdown/config.py:
	Set up for pessulus import.
	
	* admin-tool/lockdown/disabledapplets.py:
	* admin-tool/lockdown/icons.py:
	* admin-tool/lockdown/lockdownapplier.py:
	* admin-tool/lockdown/lockdowncheckbutton.py:
	* admin-tool/lockdown/maindialog.py:
	* admin-tool/lockdown/pessulus.glade:
	* admin-tool/lockdown/safeprotocols.py:
	* admin-tool/lockdown/simpleeditabletreeview.py:
	Initial pessulus import (ChangeLog entry 2005-11-02)
	
	* admin-tool/lockdownwindow.py:
	* admin-tool/lockdownappliersabayon.py:
	* admin-tool/sessionwindow.py:
	Remove lockdown window and move sabayon applier
	code to its own file.
	
	* lib/Makefile.am:
	* lib/config.py.in:
	* lib/util.py:
	Add and use LOCALEDIR
	
	* lib/sources/gconfsource.py:
	Implement set_gconf_list.

2005-11-01  Alexander Larsson  <alexl@redhat.com>

	* lib/userprofile.py: